--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ cache:
 python:
   - 3.5
   - 3.6
+env:
+  global:
+    - PYTHONPATH="/home/travis/build/MichaelYusko/PyGiphy"
 install:
   - pip install -U setuptools
   - pip install -r requirements-dev.txt
