--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,7 @@
-requests
-flake8
-isort
-pylint
-mock
+requests==2.18.4
+flake8==3.4.1
+isort==4.2.15
+pylint==1.7.4
+mock==2.0.0
+tox==2.9.1
+pylint==1.7.4
